# interbolt

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  bench.py  policy.example.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: index.md  quickstart.md
docs/concepts/: identity.md  namespacing.md  policies.md  taint-propagation.md
docs/design/: deferred.md
docs/guides/: auditing.md  ci.md  for-otel-users.md  mcp.md  otel.md  testing.md
docs/reference/: api.md  events.md  performance.md  reporters.md
src/interbolt/: __init__.py  constants.py  errors.py  policy.example.yaml
src/interbolt/cli/: __init__.py  commands.py  main.py  render.py
src/interbolt/enforcement/: __init__.py  audit.py  check.py  enforce.py  signals.py
src/interbolt/models/: __init__.py  core.py  protocols.py
src/interbolt/policy/: __init__.py  cel.py  compile.py  engine.py  evaluate.py  explain.py  identity_ast.py  partial_eval.py  policy.py  schema.json  schema.py  shadowing.py
src/interbolt/reporting/: __init__.py  describe.py  otel.py  reporters.py
src/interbolt/runtime/: __init__.py  config.py  current.py  guard.py  observers.py  runtime.py
src/interbolt/taint/: __init__.py  carriers.py  endorse.py  ingress.py  runstate.py  walk.py
src/interbolt/utils/: __init__.py  context.py  log.py  names.py  signatures.py
src/interlock/: __init__.py  constants.py  errors.py
src/interlock/cli/: __init__.py
src/interlock/enforcement/: __init__.py
src/interlock/models/: core.py  protocols.py
src/interlock/policy/: __init__.py  engine.py  schema.json  schema.py
src/interlock/reporting/: __init__.py
src/interlock/runtime/: __init__.py  guard.py
src/interlock/taint/: __init__.py
src/interlock/utils/: __init__.py
tests/: conftest.py
tests/integration/: test_agent_loop.py  test_audit.py  test_concurrency.py  test_endorse.py  test_multi_module_agent.py
tests/integration/fixtures/: __init__.py  agents.py  model.py  sources.py  tools.py
tests/policies/: agent_loop.yaml
tests/unit/: test_cli.py  test_constants.py  test_enforcement.py  test_errors.py  test_models.py  test_policy_engine.py  test_policy_explain.py  test_policy_schema.py  test_reporting.py  test_reporting_otel.py  test_runtime.py  test_runtime_guard.py  test_taint.py  test_taint_stress.py  test_utils.py
