[project]
name = "interbolt"
dynamic = ["version"]
description = "Provenance-gated tool calls for AI agents."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
  { name = "David Kirchhoff", email = "david@deconvoluteai.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",

  "Topic :: Security",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "pydantic",
  "cel-python",
  "pyyaml",
  "rich",
]

[project.optional-dependencies]
otel = ["opentelemetry-api>=1.20"]

[project.urls]
Homepage = "https://deconvolutelabs.com"
Issues = "https://github.com/deconvolute-labs/interbolt/issues"

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-mock",
  "pytest-cov",
  "ruff",
  "mypy",
  "pre-commit",
  "types-pyyaml",
  "git-cliff>=2.13.1",
  "opentelemetry-sdk",
]

[project.scripts]
interbolt = "interbolt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/interbolt/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/interbolt"]
artifacts = [
  "src/interbolt/policy.example.yaml",
  "src/interbolt/py.typed",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S", "UP"] # pycodestyle, pyflakes, isort, bugbear
ignore = [
  "S101", # Ignore "assert" warnings (we use them in pytest)
]

[tool.ruff.lint.per-file-ignores]
# Tests often use "magic values" or mock data that look like secrets
"tests/**/*" = ["S105", "S106", "S101"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true  # Force you to write types for every function
ignore_missing_imports = true # Prevents errors if a 3rd party lib has no types

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# opentelemetry is an optional, soft-imported dependency (utils.current_trace_context,
# reporting/otel.py). `follow_imports = "skip"` makes every symbol from it resolve to
# `Any` unconditionally, so type checking here never depends on whether the package
# (or which version of it) happens to be installed in the environment running mypy.
module = ["opentelemetry", "opentelemetry.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q --cov=interbolt --cov-report=xml"
asyncio_mode = "auto"
